cmake_minimum_required(VERSION 3.3)
project(myleetcode)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES main.cpp)
add_executable(myleetcode ${SOURCE_FILES})
add_executable(totalNQueens totalNQueens.cpp)
add_executable(longestconsective longestconsective.cpp)
add_executable(findMedianSortedArray findMedianSortedArray.cpp)
add_executable(maxSlidingWindow maxSlidingWindow.cpp)
add_executable(getSkyline getSkyline.cpp)
add_executable(shortestpalinoma shortestpalinoma.cpp)
add_executable(maximumGap maximumGap.cpp)
add_executable(findMin findMin.cpp)
add_executable(maxPathSum maxPathSum.cpp)
add_executable(searchInRotatedArray searchInRotatedArray.cpp)
add_executable(trap trap.cpp)
add_executable(jumpGame2 jumpGame2.cpp)
add_executable(solveNQueens solveNQueens.cpp)
add_executable(addTwoNumbers addTwoNumbers.cpp)
add_executable(BSTIterator BSTIterator.cpp)
add_executable(calculate2 calculate2.cpp)
add_executable(calculate calculator.cpp)
add_executable(canjump canjump.cpp)
add_executable(countNodes countNodes.cpp)
add_executable(evalRPN evalRPN.cpp)
add_executable(findKthElement findKthElement.cpp)
add_executable(findMin1 findMin1.cpp)
add_executable(findPeakElement findPeakElement.cpp)
add_executable(findRepeatedDnaSequences findRepeatedDnaSequences.cpp)
add_executable(generateMatrix generateMatrix.cpp)
add_executable(groupAnagrams groupAnagrams.cpp)
add_executable(largestNumber largestNumber.cpp)
add_executable(lengthofLongestSubstr lengthofLongestSubstr.cpp)
add_executable(longestPalidromicSubstr longestPalidromicSubstr.cpp)
add_executable( maxArea maxArea.cpp)
add_executable(maxProfit maxProfit.cpp)
add_executable(maxProfit2 maxProfit2.cpp)
add_executable(wordsearch wordsearch.cpp)
add_executable(wordSearch wordSearch.cpp)
add_executable(wordbreak wordbreak.cpp)
add_executable(twoSum twoSum.cpp)
add_executable(threeSumClosest threeSumClosest.cpp)
add_executable(maxsubarray maxsubarray.cpp)
add_executable(rotate rotate.cpp)
add_executable(rotateRight rotateRight.cpp)
add_executable(uniquePath uniquePath.cpp)
add_executable(searchMaxtrix searchMaxtrix.cpp)
add_executable(subsets subsets.cpp)
add_executable(summaryRanges summaryRanges.cpp)
add_executable(spiralOrder spiralOrder.cpp)
add_executable(sortColor sortColor.cpp)
add_executable(singleNumber singleNumber.cpp)
add_executable(simplifyPath simplifyPath.cpp)
add_executable(rightSideView rightSideView.cpp)
add_executable(reverseBit reverseBit.cpp)
add_executable(reverseword reverseword.cpp)
add_executable(removeDuplicate2 removeDuplicate2.cpp)
add_executable(produceExceptSelf produceExceptSelf.cpp)
add_executable(permutate permutate.cpp)
add_executable(nextPermutation nextPermutation.cpp)
add_executable(minPathSum minPathSum.cpp)
add_executable(myPow myPow.cpp)